--- a/src/pug/pages/ui/section-card.pug
+++ b/src/pug/pages/ui/section-card.pug
@@ -12,12 +12,12 @@ block content
 				+card-product-text('#004AAA;', 'Кошелек', 'Ожидайте яркий взрыв в вашей сумке с женскими кошельками mywalit: кожа лучшего качества, элегантные дизайны и уникальные детали для уникального продукта, который вы можете наслаждаться каждый день!'  )
 				+card-product-img('#004AAA', 'bg/blue-purse.jpg', '286px;')
 			
-		.title-4 добавить карточку с описанием 
+		strong добавить карточку с описанием 
 		pre.
 			.col-md-6.col-xl-4
 				+card-product-text('#004AAA;', 'Кошелек', 'Ожидайте яркий взрыв в вашей сумке с женскими кошельками mywalit: кожа лучшего качества, элегантные дизайны и уникальные детали для уникального продукта, который вы можете наслаждаться каждый день!'  )
 				+card-product-img('#004AAA', 'bg/blue-purse-tab.jpg', '340px;')
-		.title-4 миксин для карточки с описание
+		strong миксин для карточки с описание
 		pre.
 			mixin card-product-text(cardColor, cardTitle, cardText )
 				.card-description.card-description--color(style="background-color:"+ cardColor)
