--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -31,8 +31,8 @@
 			+linkLeftPanel("Кнопки", "buttons.html")
 			+linkLeftPanel("Карточки товара", "cards.html")
 			+linkLeftPanel("Карточка раздела", "section-card.html")
-			+linkLeftPanel("Социальные сети", "ui-social.html")
-			+linkLeftPanel("Каталог пагинация", "catalogue-pagination.html")
+			+linkLeftPanel("Социальные сети", "social.html")
+			+linkLeftPanel("Пагинация", "pagination.html")
 
 
 	.left-panel__section
