--- a/src/pug/pages/ui/cards.pug
+++ b/src/pug/pages/ui/cards.pug
@@ -28,23 +28,21 @@ block content
 					+card--sale( '- 40%','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown','#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863р.', '4 863р.' )(class="card-product--colorscheme")
 						+button-store('Нет в наличии','#')
 						+colors-product('#FF7979', '#6BAC89', '#C3499E', '#FFB047', '#002D76', '#AF674F')
-		.title-4 Карточка обычная 				
+		strong Карточка обычная 				
 		pre.
-			.col-6.col-md-3
-				+card( 'goods/purse-brown-hover.png', 'goods/purse_yellow.png', 'purse yellow', '#','Сумка большая, коллекция "Рига"', '4 863р.')
-					+button-store('Нет в наличии','#')
-		.title-4 Карточка со скидкой				
+			+card( 'goods/purse-brown-hover.png', 'goods/purse_yellow.png', 'purse yellow', '#','Сумка большая, коллекция "Рига"', '4 863р.')
+				+button-store('Нет в наличии','#')
+		strong Карточка со скидкой				
 		pre.
-			.col-6.col-md-3
-				+card--sale( '- 40%','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown','#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863р.', '4 863р.' )
-					+button-cart('В корзину','#')
+			+card--sale( '- 40%','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown','#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863р.', '4 863р.' )
+				+button-cart('В корзину','#')
 
-		.title-4 Карточка обычная с цветовой палитрой 				
+		strong Карточка обычная с цветовой палитрой 				
 		pre.
 			+card( 'goods/purse-brown-hover.png', 'goods/purse_yellow.png', 'purse yellow', '#','Сумка большая, коллекция "Рига"', '4 863р.')(class="card-product--colorscheme")
 				+button-cart('В корзину','#')
 				+colors-product('#FF7979', '#6BAC89', '#C3499E', '#FFB047', '#002D76', '#AF674F')
-		.title-4 Карточка со скидкой с цветовой палитрой				
+		strong Карточка со скидкой с цветовой палитрой				
 		pre.
 			+card--sale( '- 40%','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown','#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863р.', '4 863р.' )(class="card-product--colorscheme")
 				+button-store('Нет в наличии','#')
