blur effect added

--- a/src/less/base/_base.less
+++ b/src/less/base/_base.less
@@ -159,6 +159,9 @@ blockquote p {
 	border-bottom: 1px solid #e9eff3;
 }
 
+.filter-blur {
+	filter:blur(4px);
+}
 
 /***style for sticky-footer***/
 
