--- a/src/pug/pages/ui/forms.pug
+++ b/src/pug/pages/ui/forms.pug
@@ -1,13 +1,13 @@
 extends ../../layouts/ui-layout/ui-layout.pug
 
 block variables
-	- var title = 'Элементы формы - UI-kit и HTML фреймворк - Документация';
+	- var title = 'Формы - UI-kit и HTML фреймворк - Документация';
 	- var pageClass = 'body--dashboard';
 
 block content
 	.container.container--left
 		
-		.title Элементы формы
+		.title Формы
 
 		.section-ui
 			+checkbox('Текст lable checkbox')
