--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -18,7 +18,7 @@
 			+linkLeftPanel("Типографика", "typhography.html")
 			+linkLeftPanel("Сетка", "grid.html")
 			+linkLeftPanel("Вертикальный ритм", "vertical-grid.html")
-			+linkLeftPanel("Элементы формы", "forms.html")
+			+linkLeftPanel("Формы", "forms.html")
 
 
 	.left-panel__section
