--- a/src/less/blocks/_city-selection.less
+++ b/src/less/blocks/_city-selection.less
@@ -1,6 +1,6 @@
 .selection-block-wrapper{
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	@media @tablet{
 		width: 360px;
 		height: 650px;}
@@ -35,7 +35,11 @@
 	margin-top: 5px;
 	background-color: @white;
 	width: 100%;	
-	height: 530px;	
+	height: 100%;
+	@media @desktop {
+		width: 360px;
+		height: 530px;
+	}	
 }
 .city-selection-block__title {		
 	text-align: center;
@@ -71,7 +75,7 @@
 	margin: 0;
 	padding: 0;
 	list-style-type: none;
-	width: 352px;
+	min-width: 320px;
 	height: 100%;
 	//height: 350px;
 }
