--- a/src/less/blocks/_filter.less
+++ b/src/less/blocks/_filter.less
@@ -1,20 +1,19 @@
 // Форма
 .form-filter {
 	width: 360px;
-	color:@textMenu;
+	color: @textMenu;
 	line-height: 1;
 	text-align: center;
 
 	@media @desktop {
 		width: 270px;
-	}	
+	}
 
 	ul {
 		list-style: none;
 	}
 	.filter-label {
-		margin:0;
-		// margin-left: 8px;
+		margin: 0; // margin-left: 8px;
 		cursor: pointer;
 	}
 }
@@ -24,9 +23,9 @@
 	display: block;
 	align-items: center;
 	justify-content: space-between;
-	padding:12px 0;
-	position:relative;
-	border-bottom:1px solid @borderMenu;
+	padding: 12px 0;
+	position: relative;
+	border-bottom: 1px solid @borderMenu;
 
 	@media @desktop {
 		display: flex;
@@ -35,13 +34,13 @@
 
 .filter__title {
 	font-size: 20px;
-	color:@text-red;	
+	color: @text-red;
 }
 
 .filter__clean-button {
 	display: none;
 	font-size: 16px;
-	color:@textMenu;
+	color: @textMenu;
 
 	@media @desktop {
 		display: block;
@@ -49,57 +48,54 @@
 
 	a {
 		text-decoration: none;
+		color: black;
 		&:hover {
-			color:@text-red;
+			color: @text-red;
 		}
-	}	
+	}
 }
 
 // Иконка крестик
 .filter__close-icon {
 	display: block;
 	cursor: pointer;
-	position:absolute;
-	right:16px;
-	top:50%;
-	transform:translateY(-50%);
+	position: absolute;
+	right: 16px;
+	top: 50%;
+	transform: translateY(-50%);
 
-	
+
 	@media @desktop {
 		display: none;
-	}	
+	}
 }
 
 
 // Меню 1 уровня
 .filter-menu-l1 {
-	margin:0;
-	padding:0 0;
+	margin: 0;
+	padding: 0 0;
 	text-transform: uppercase;
 	text-align: left;
-	> li {
+	>li {
 		position: relative;
 		padding: 12px 16px;
 		cursor: pointer;
-		border-bottom:1px solid @borderMenu;
-
-		// отступ от кнопки
+		border-bottom: 1px solid @borderMenu; // отступ от кнопки
 		&:last-child {
 			margin-bottom: 94px;
 		}
 
 		@media @desktop {
 			padding: 16px 8px 0px 8px;
-			border:none;
+			border: none;
 
 			&:last-child {
 				margin-bottom: 22px;
-			}			
-		}
-
-		// Убрать border у послденего
-		&:last-child .filter-menu-l2{
-			border-bottom:none;
+			}
+		} // Убрать border у послденего
+		&:last-child .filter-menu-l2 {
+			border-bottom: none;
 		}
 	}
 }
@@ -107,20 +103,19 @@
 // Меню 2 уровня
 .filter-menu-l2 {
 	display: none;
-	margin:0;
-	padding:0;
-	text-transform: none;
-	// border-bottom:none;
-	color:@borderMenu;
+	margin: 0;
+	padding: 0;
+	text-transform: none; // border-bottom:none;
+	color: @borderMenu;
 	padding: 8px 0;
-	
-	> li {
+
+	>li {
 		padding: 8px 0;
 	}
 
 	@media @desktop {
 		display: block;
-		border-bottom:1px solid @borderMenu;
+		border-bottom: 1px solid @borderMenu;
 	}
 }
 
@@ -129,7 +124,7 @@
 	display: inline-block;
 	width: 12px;
 	height: 12px;
-	border:1px solid @gray;
+	border: 1px solid @gray;
 	margin-right: 8px;
 	background-image: url('../../img/icons/checkbox-marker.svg');
 	background-repeat: no-repeat;
@@ -137,17 +132,17 @@
 	transition: 0.1s ease-out;
 }
 
-.filter-checkbox{
-	display: none;	
+.filter-checkbox {
+	display: none;
 }
 
-.filter-checkbox:checked  ~ .filter-label-custom{
-	 color:@textMenu;
+.filter-checkbox:checked~.filter-label-custom {
+	color: @textMenu;
 }
 
-.filter-checkbox:checked + .filter-checkbox-custom {
+.filter-checkbox:checked+.filter-checkbox-custom {
 	background-position: center;
-	border-color:@textMenu;
+	border-color: @textMenu;
 }
 
 
@@ -186,15 +181,14 @@
 	transition: all 0.2s;
 
 	&:hover {
-		transform:scale(1.1);
+		transform: scale(1.1);
 	}
-	
 }
 
 // Жобавляем рамку при выборе
-.label-color-checkbox input:checked + .filter-color-checkbox {
+.label-color-checkbox input:checked+.filter-color-checkbox {
 	box-shadow: 0 0 0 1px @white,
-				0 0 0 3px @color-11;
+	0 0 0 3px @color-11;
 }
 
 // Иконка крестик
@@ -203,7 +197,7 @@
 		content: "+";
 		position: absolute;
 		right: 14px;
-		top:7px;
+		top: 7px;
 		color: @textMenu;
 		font-size: 28px;
 	}
@@ -211,7 +205,7 @@
 		content: "";
 		position: absolute;
 		right: 15px;
-		top:20px;
+		top: 20px;
 		height: 2px;
 		width: 15px;
 		background-color: transparent;
@@ -224,9 +218,9 @@
 
 // класс для открытия/закрытия иконки
 .is-opened.filter-icon-close:before {
-	content:'';
+	content: '';
 }
+
 .is-opened.filter-icon-close:after {
 	background-color: @textMenu;
 }
-
