--- a/src/pug/layouts/_mixins-links.pug
+++ b/src/pug/layouts/_mixins-links.pug
@@ -6,3 +6,4 @@ include ../mixins/_colors.pug
 include ../mixins/_section-card.pug
 include ../mixins/_social.pug
 include ../mixins/_pagination.pug
+include ../mixins/_breadcrumb.pug
