--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -19,6 +19,7 @@
 			+linkLeftPanel("Сетка", "grid.html")
 			+linkLeftPanel("Вертикальный ритм", "vertical-grid.html")
 			+linkLeftPanel("Формы", "forms.html")
+			+linkLeftPanel("Хлебные крошки", "bread-crumb.html")
 
 
 	.left-panel__section
