--- a/src/less/main.less
+++ b/src/less/main.less
@@ -18,6 +18,7 @@
 @import "blocks/_social.less";
 @import "blocks/_sections.less";
 @import "blocks/_banner.less";
+@import "blocks/_bread-crumb.less";
 
 @import "blocks/_forms.less";
 
