--- a/src/pug/sections/header-top.pug
+++ b/src/pug/sections/header-top.pug
@@ -19,8 +19,8 @@
 		a(href="main.html").logo
 		.row
 			.col-6.d-flex.d-lg-none
-				.menu-block#toggle-menu
-					img(src="../img/icons/gamburger.svg" alt="иконка")
+				.menu-block
+					img#toggle-menu(src="../img/icons/gamburger.svg" alt="иконка")
 				.menu-block.toggle-search-block
 					img(src="../img/icons/search.svg" alt="иконка")
 			.col-6.d-flex.justify-content-end
