--- a/src/pug/layouts/_mixins-links.pug
+++ b/src/pug/layouts/_mixins-links.pug
@@ -5,5 +5,7 @@ include ../mixins/_mixins.pug
 include ../mixins/_colors.pug
 include ../mixins/_section-card.pug
 include ../mixins/_social.pug
+include ../mixins/_input.pug
+
 
 
