--- a/src/less/blocks/_city-selection.less
+++ b/src/less/blocks/_city-selection.less
@@ -1,23 +1,18 @@
-.selection-block-wrapper{
-	width: 100%;
-	height: 100%;
-	@media @tablet{
-		width: 360px;
-		height: 650px;}
+.city-selection-wrapper {
+	position: relative;
+	width: 360px;
+	height: 650px;
+	//width: 100%;
+	//height: 100%;	
 }
 .selection-block-head{
-	position: relative;
-	width: 100%;	
-	background-color:@white;	 
-}
-.selection-block-head:after{
-	content: "";
-	position: absolute;
-	width: 8px;
-	height: 115px;
-	top: 0;
+	width: 349px;
+	position: sticky;
+	left: 0;
 	right: 0;
-	background-color: @body-bg;
+	top: 0;	
+	background-color: #fff;
+	z-index: 1;
 }
 .close-selection{
 	display: block;
@@ -30,16 +25,6 @@
 	}
 .close-selection:hover {
 	opacity: 0.6;
-}			
-.selection-block-body{
-	margin-top: 5px;
-	background-color: @white;
-	width: 100%;	
-	height: 100%;
-	@media @desktop {
-		width: 360px;
-		height: 530px;
-	}	
 }
 .city-selection-block__title {		
 	text-align: center;
@@ -70,16 +55,8 @@
 		font-size: 18px;
 	}
 }
-.city-selection-list {
-	background-color: @white;
-	margin: 0;
-	padding: 0;
-	list-style-type: none;
-	min-width: 320px;
-	height: 100%;
-	//height: 350px;
-}
-.city-selection-item {
+.city-selection-item{
+	display: block;
 	height: 40px;
 	padding-left: 16px;
 	font-size: 16px;
@@ -87,7 +64,13 @@
 	color: @btn-text-buy-click;
 	border-bottom: 1px solid @borderMenu;
 }
-.grey-skin.selection-block-body.scrollable .thumb{
+.city-selection-item:hover{
+	color: lighten(@btn-text-buy-click, 25%);
+	text-decoration: none;
+	}
+
+
+.grey-skin.city-selection-wrapper.scrollable .thumb{
 	border-radius: 10px;	
 	background-color: #acacac;
 }
@@ -97,4 +80,9 @@
 }
 .grey-skin.scrollable .scroll-bar{	
 	background-color: @body-bg;
+}
+
+
+.city-selection-wrapper.grey-skin.scrollable .owerview{
+	width: 100%;
 }
