--- a/src/pug/pages/ui/city-selection.pug
+++ b/src/pug/pages/ui/city-selection.pug
@@ -6,39 +6,42 @@ block variables
 
 block content
 	.container.container--left
-		.title Выбор города		
+		.title Выбор города
 		.section-ui
-			.row
-				.col-lg-6
-					.selection-block-wrapper
-						.selection-block-head
-							a.close-selection(href="#")
-								img(src="../img/icons/close.svg", alt="закрыть")
-							.city-selection-block__title
-								.selection-block__title--top Выбрать город							
-								.selection-block__subtitle От выбора зависят оплата и условия доставки
-							input.city-search-input(type="text" name="city-search-input" placeholder="Поиск города ...")
-
-						.selection-block-body.grey-skin
-							
-							ul.city-selection-list
-								li.city-selection-item Москва
-								li.city-selection-item Санкт-Петербург
-								li.city-selection-item Ярославль
-								li.city-selection-item Воронеж
-								li.city-selection-item Краснодар
-								li.city-selection-item Сочи
-								li.city-selection-item Ростов-на-Дону
-								li.city-selection-item Нижний Новгород
-								li.city-selection-item Самара
-								li.city-selection-item Перьм
-								li.city-selection-item Уфа
-								li.city-selection-item Самара
-								li.city-selection-item Перьм
-								li.city-selection-item Уфа
-								li.city-selection-item Москва
-								li.city-selection-item Санкт-Петербург
-								li.city-selection-item Ярославль
-								li.city-selection-item Воронеж
-								li.city-selection-item Краснодар
-								li.city-selection-item Сочи
+			
+			.city-selection-wrapper.grey-skin
+				.selection-block-head
+					a.close-selection(href="#")
+						img(src="../img/icons/close.svg", alt="закрыть")
+					.city-selection-block__title
+						.selection-block__title--top Выбрать город							
+						.selection-block__subtitle От выбора зависят оплата и условия доставки
+					input.city-search-input(type="text" name="city-search-input" placeholder="Поиск города ...")
+				
+				a.city-selection-item(href="#") Сочи
+				a.city-selection-item(href="#") Краснодар
+				a.city-selection-item(href="#") Сочи
+				a.city-selection-item(href="#") Ростов-на-Дону
+				a.city-selection-item(href="#") Нижний Новгород
+				a.city-selection-item(href="#") Москва
+				a.city-selection-item(href="#") Санкт-Петербург
+				a.city-selection-item(href="#") Ярославль
+				a.city-selection-item(href="#") Воронеж
+				a.city-selection-item(href="#") Краснодар
+				a.city-selection-item(href="#") Сочи
+				a.city-selection-item(href="#") Ростов-на-Дону
+				a.city-selection-item(href="#") Нижний Новгород
+				a.city-selection-item(href="#") Самара
+				a.city-selection-item(href="#") Перьм
+				a.city-selection-item(href="#") Уфа
+				a.city-selection-item(href="#") Самара
+				a.city-selection-item(href="#") Перьм
+				a.city-selection-item(href="#") Уфа
+				a.city-selection-item(href="#") Москва
+				a.city-selection-item(href="#") Санкт-Петербург
+				a.city-selection-item(href="#") Ярославль
+				a.city-selection-item(href="#") Воронеж
+				a.city-selection-item(href="#") Краснодар						
+				a.city-selection-item(href="#") Самара
+				a.city-selection-item(href="#") Перьм
+				a.city-selection-item(href="#") Уфа
