changed font-size input placeholder

--- a/src/less/blocks/_forms.less
+++ b/src/less/blocks/_forms.less
@@ -46,6 +46,10 @@
 		padding-left: 4px;
 		padding-right: 5px;
 		color: @active-checkbox;
+		font-size: 12px;
+		@media @desktop {
+			font-size: 14px;
+		}
 	}
 }
 .input-field--success-icon {
