--- a/src/less/blocks/_city-selection.less
+++ b/src/less/blocks/_city-selection.less
@@ -1,18 +1,22 @@
 .city-selection-wrapper {
 	position: relative;
-	width: 360px;
-	height: 650px;
-	//width: 100%;
-	//height: 100%;	
+	width: 100%;
+	height: 100%;
+	
+	@media @tablet{
+		width: 360px;
+		height: 650px;
+	}
 }
 .selection-block-head{
-	width: 349px;
+	min-width: 349px;
 	position: sticky;
 	left: 0;
 	right: 0;
 	top: 0;	
 	background-color: #fff;
 	z-index: 1;
+	@media @tablet{width: 349px;}
 }
 .close-selection{
 	display: block;
@@ -48,7 +52,7 @@
 	height: 48px;
 	padding-left: 16px;
 	border: none;	
-	box-shadow: 0px 2px 6px rgba(154, 154, 154, 0.1);
+	box-shadow: 0px 2px 6px rgba(154, 154, 154, 0.35);
 	outline: none;	
 	&::placeholder {
 		color: @borderMenu;
