--- a/src/less/blocks/_city-selection.less
+++ b/src/less/blocks/_city-selection.less
@@ -1,22 +1,22 @@
 .city-selection-wrapper {
 	position: relative;
 	width: 100%;
-	height: 100%;
+	height: 100vh;
 	
-	@media @tablet{
+	/* @media @tablet{
 		width: 360px;
 		height: 650px;
-	}
+	} */
 }
 .selection-block-head{
-	min-width: 349px;
+	// min-width: 349px;
 	position: sticky;
 	left: 0;
 	right: 0;
 	top: 0;	
 	background-color: #fff;
 	z-index: 1;
-	@media @tablet{width: 349px;}
+	// @media @tablet{width: 349px;}
 }
 .close-selection{
 	display: block;
@@ -84,9 +84,4 @@
 }
 .grey-skin.scrollable .scroll-bar{	
 	background-color: @body-bg;
-}
-
-
-.city-selection-wrapper.grey-skin.scrollable .owerview{
-	width: 100%;
 }
