added some fix input field

--- a/src/less/blocks/_forms.less
+++ b/src/less/blocks/_forms.less
@@ -17,6 +17,7 @@
 	width: 100%;
 	color: @active-checkbox;
 	padding-left: 15px;
+	cursor: pointer;
 	&--success {
 		&:focus {
 			border: 1px solid @success;
@@ -101,6 +102,7 @@
 	transition: 0.2s ease-in-out;
 	top: 21px;
 	left: 1em;
+	cursor: pointer;
 	@media @desktop {
 		top: 25px;
 		font-size: 16px;
