--- a/src/pug/layouts/page-layout/_foot.pug
+++ b/src/pug/layouts/page-layout/_foot.pug
@@ -2,4 +2,5 @@ script(src="libs/jquery/jquery.min.js")
 script(src="../libs/jquery-custom-scrollbar/jquery.custom-scrollbar.js")
 block scripts
 script(src="js/main.js")
+script(src="js/input.js")
 script(defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js")
