--- a/src/pug/layouts/ui-layout/_foot.pug
+++ b/src/pug/layouts/ui-layout/_foot.pug
@@ -4,4 +4,5 @@ script(src="../libs/jquery-custom-scrollbar/jquery.custom-scrollbar.js")
 block scripts
 	
 script(src="../js/main.js")
+script(src="../js/input.js")
 script(defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js")
