scrollbar to menu added

--- a/src/pug/layouts/page-layout/_head.pug
+++ b/src/pug/layouts/page-layout/_head.pug
@@ -12,6 +12,7 @@ meta(name="description" content="")
 link(rel="stylesheet", href="./fonts/MyriadPro/MyriadPro.css")
 
 link(rel="stylesheet", href="./libs/jquery-custom-scrollbar/jquery.custom-scrollbar.css")
+//- link(rel="stylesheet", href="./libs/custom-scroll/jquery.custom-scroll.css")
 
 link(rel="stylesheet", href="./css/main.css")
 link(rel="stylesheet", href="./libs/bootstrap4-grid-customized/custom-grid.css")
