--- a/src/pug/sections/header-nav.pug
+++ b/src/pug/sections/header-nav.pug
@@ -1,7 +1,7 @@
 //- шапка навигация
 .bg-header-nav
 	.container
-		nav
+		nav#header-navigation-block
 			.header-nav
 				ul#menu-level-1.menu-level-1
 						li
@@ -29,6 +29,21 @@
 													a(href="#!") Брелоки
 												li
 													a(href="#!") Перчатки	
+												li
+													a(href="#!") Визитницы и кардхолдеры
+												li
+													a(href="#!") Обложки для документов
+												li
+													a(href="#!") Косметички
+												li
+													a(href="#!") Ключницы
+												li
+													a(href="#!") Монетницы
+												li
+													a(href="#!") Брелоки
+												li
+													a(href="#!") Перчатки	
+
 
 										li
 											a(href="#!").menu-icon Коллекция 2
