--- a/src/less/sections/_header-nav.less
+++ b/src/less/sections/_header-nav.less
@@ -10,7 +10,7 @@ nav {
 	left: 0;
 	right: 0;
 	z-index: 1000;
-	// background-color: rgba(0, 0, 0, 0.25);
+	background-color: rgba(0, 0, 0, 0.25);
 
 	@media @desktop {
 		position: static;
