fixed input field after fix
fixed input field after fix

--- a/src/less/blocks/_inputs.less
+++ b/src/less/blocks/_inputs.less
@@ -46,7 +46,7 @@
 	}
 }
 
-.input-field--has-focus.input-field__label {
+.input-field--has-focus+.input-field__label {
 	top: 0;
 	left: 10px;
 	background-color: @white;
