--- a/src/pug/layouts/ui-layout/_foot.pug
+++ b/src/pug/layouts/ui-layout/_foot.pug
@@ -1,5 +1,6 @@
 script(src="../libs/jquery/jquery.min.js")
 script(src="../libs/jquery-custom-scrollbar/jquery.custom-scrollbar.js")
+script(src="../libs/jquery.nicescroll.js")
 
 block scripts
 	
