--- a/src/less/blocks/_checkbox.less
+++ b/src/less/blocks/_checkbox.less
@@ -42,17 +42,37 @@
 }
 
 .checkbox-label-text {
-	display: inline-block;
+	width: 90%;
+	display: inline;
 	padding-left: 11px;
 	color: @active-checkbox;
-	font-size: 16px;
-	width: 50%;
-    vertical-align: middle;
+	font-size: 12px;
+	&--filter {
+		color: @gray;
+		font-size: 16px;
+		vertical-align: middle;
+	}
+	@media @tablet {
+		width: 90%;
+	}
+	@media @desktop {
+		width: 90%;
+		font-size: 14px;
+	}
 }
 
 .checkbox-custom,
 .checkbox-label {
 	display: inline-block;
+}
+.checkbox-custom {
+	margin-top: 4px;
+	vertical-align: top;
+	&--filter {
+		vertical-align: bottom;
+		margin-bottom: 8px;
+
+	}
 }
 
 .checkbox:checked+.checkbox-custom::before {
@@ -71,11 +91,6 @@
 	left: 1px;
 }
 
-.checkbox-label-text--filter {
-	font-size: 16px;
-	width: 100%;
-}
-
 .checkbox:focus+.checkbox-custom,
 .checkbox.has-focus+.checkbox-custom {
 	box-shadow: 0 0 15px 0 @gray;
@@ -87,17 +102,4 @@
 
 .checkbox:checked~.checkbox-label-text--filter {
 	color: @active-checkbox;
-}
-
-.checkbox-label-text {
-	width: 90%;
-	&--filter {
-		color: @gray;
-	}
-	@media @tablet {
-		width: 90%;
-	}
-	@media @desktop {
-		width: 90%;
-	}
 }
