--- a/src/less/sections/_footer-subscribe.less
+++ b/src/less/sections/_footer-subscribe.less
@@ -93,75 +93,5 @@
 	margin-left: 8px;
 }
 .footer-subscribe--checkbox {
-	position: absolute;
-	opacity: 0;
-}
-.footer-subscribe--checkbox-custom {
-	position: relative;
-	width: 16px;
-	height: 16px;
-	border: 1px solid @gray;
-	&:focus {
-		border: 1px solid @red;
-	}
-}
-.footer-subscribe--checkbox-custom,
-.footer-subscribe--checkbox-label {
-	display: inline-block;
-	vertical-align: top;
-}
-@media @tablet {
-	.footer-subscribe--checkbox-custom,
-	.footer-subscribe--checkbox-label {
-		vertical-align: middle;
-	}
-}
-@media @desktop {
-	.footer-subscribe--checkbox-custom,
-	.footer-subscribe--checkbox-label {
-		vertical-align: middle;
-	}
-}
-.footer-subscribe--checkbox:checked + .footer-subscribe--checkbox-custom::before {
-	content: url('../../img/icons/checkbox.svg');
-	display: block;
-	position: absolute;
-	top: -5px;
-    left: 2px;
-}
-.footer-subscribe--checkbox-label {
-	position: relative;
-	padding-top: 8px;
-	&-text {
-		display: inline-block;
-		padding-left: 11px;
-		font-size: 12px;
-		color: @active-checkbox;
-	}
-}
-@media @desktop {
-	.footer-subscribe--checkbox-label {
-			padding-top: 3px;
-	}
-}
-.footer-subscribe--checkbox-label-focus {
-	position: absolute;
-	line-height: 15px;
-	font-size: 12px;
-	text-align: center;
-	color: @active-checkbox;
-	top: -47px;
-	left: 16px;
-	background-color: @white;
-	display: none;
-}
-@media @desktop {
-	.footer-subscribe--checkbox-label-focus {
-		top: -55px;
-	}
-}
-.footer-subscribe--checkbox:focus + .footer-subscribe--checkbox-custom,
-.footer-subscribe--checkbox.has-focus + .footer-subscribe--checkbox-custom,
-.footer-subscribe--checkbox:checked + .footer-subscribe--checkbox-custom{
-	border: 1px solid @active-checkbox;
+	margin-top: 8px;
 }
