--- a/src/pug/sections/_footer-subscribe.pug
+++ b/src/pug/sections/_footer-subscribe.pug
@@ -3,12 +3,10 @@
 		.title-4 Выбери цвет своей индивидуальности!
 		.footer-subscribe--subtitle Будь в курсе новостей и специальных предложениях!
 		form.footer-subscribe--form(action="")
-			input.footer-subscribe--input.footer-subscribe--border(type="text" placeholder="Email")
-			.footer-subscribe--buttons
-				+button-she("Она", "#")
-				+button-he("Он", "#")
-			label.footer-subscribe--checkbox-label
-				span.footer-subscribe--checkbox-label-focus Email
-				input.footer-subscribe--checkbox(type="checkbox")
-				span.footer-subscribe--checkbox-custom
-				p.footer-subscribe--checkbox-label-text Я принимаю политику конфиденциальности.
+			.footer-subscribe-wrapper
+				+inputField('Email', 'Пожалуйста, введите действительный адрес электронной почты', 'email', 'text')
+				.footer-subscribe--buttons
+					+button-she("Она", "#")
+					+button-he("Он", "#")
+			.footer-subscribe--checkbox
+				+checkbox('Я принимаю политику конфиденциальности.')
