--- a/src/less/blocks/_city-selection.less
+++ b/src/less/blocks/_city-selection.less
@@ -3,10 +3,10 @@
 	width: 100vw;
 	height: 100vh;
 	
-	/* @media @tablet{
+	@media @tablet{
 		width: 360px;
 		height: 650px;
-	} */
+	} 
 }
 .selection-block-head{
 	// min-width: 349px;
@@ -16,7 +16,7 @@
 	top: 0;	
 	background-color: #fff;
 	z-index: 1;
-	// @media @tablet{width: 349px;}
+	 @media @tablet{width: 349px;}
 }
 .close-selection{
 	display: block;
@@ -73,7 +73,7 @@
 	text-decoration: none;
 	}
 
-
+/* 
 .grey-skin.city-selection-wrapper.scrollable .thumb{
 	border-radius: 10px;	
 	background-color: #acacac;
@@ -85,3 +85,4 @@
 .grey-skin.scrollable .scroll-bar{	
 	background-color: @body-bg;
 }
+ */
