--- a/src/pug/pages/ui/city-selection.pug
+++ b/src/pug/pages/ui/city-selection.pug
@@ -8,7 +8,7 @@ block content
 	.container.container--left
 		.section-ui
 			
-			.city-selection-wrapper.grey-skin
+			.city-selection-wrapper
 				.selection-block-head
 					a.close-selection(href="#")
 						img(src="../img/icons/close.svg", alt="закрыть")
@@ -16,31 +16,32 @@ block content
 						.selection-block__title--top Выбрать город							
 						.selection-block__subtitle От выбора зависят оплата и условия доставки
 					input.city-search-input(type="text" name="city-search-input" placeholder="Поиск города ...")
-				
-				a.city-selection-item(href="#") Сочи
-				a.city-selection-item(href="#") Краснодар
-				a.city-selection-item(href="#") Сочи
-				a.city-selection-item(href="#") Ростов-на-Дону
-				a.city-selection-item(href="#") Нижний Новгород
-				a.city-selection-item(href="#") Москва
-				a.city-selection-item(href="#") Санкт-Петербург
-				a.city-selection-item(href="#") Ярославль
-				a.city-selection-item(href="#") Воронеж
-				a.city-selection-item(href="#") Краснодар
-				a.city-selection-item(href="#") Сочи
-				a.city-selection-item(href="#") Ростов-на-Дону
-				a.city-selection-item(href="#") Нижний Новгород
-				a.city-selection-item(href="#") Самара
-				a.city-selection-item(href="#") Перьм
-				a.city-selection-item(href="#") Уфа
-				a.city-selection-item(href="#") Самара
-				a.city-selection-item(href="#") Перьм
-				a.city-selection-item(href="#") Уфа
-				a.city-selection-item(href="#") Москва
-				a.city-selection-item(href="#") Санкт-Петербург
-				a.city-selection-item(href="#") Ярославль
-				a.city-selection-item(href="#") Воронеж
-				a.city-selection-item(href="#") Краснодар						
-				a.city-selection-item(href="#") Самара
-				a.city-selection-item(href="#") Перьм
-				a.city-selection-item(href="#") Уфа
+
+				.city-selection-list
+					a.city-selection-item(href="#") Сочи
+					a.city-selection-item(href="#") Краснодар
+					a.city-selection-item(href="#") Сочи
+					a.city-selection-item(href="#") Ростов-на-Дону
+					a.city-selection-item(href="#") Нижний Новгород
+					a.city-selection-item(href="#") Москва
+					a.city-selection-item(href="#") Санкт-Петербург
+					a.city-selection-item(href="#") Ярославль
+					a.city-selection-item(href="#") Воронеж
+					a.city-selection-item(href="#") Краснодар
+					a.city-selection-item(href="#") Сочи
+					a.city-selection-item(href="#") Ростов-на-Дону
+					a.city-selection-item(href="#") Нижний Новгород
+					a.city-selection-item(href="#") Самара
+					a.city-selection-item(href="#") Перьм
+					a.city-selection-item(href="#") Уфа
+					a.city-selection-item(href="#") Самара
+					a.city-selection-item(href="#") Перьм
+					a.city-selection-item(href="#") Уфа
+					a.city-selection-item(href="#") Москва
+					a.city-selection-item(href="#") Санкт-Петербург
+					a.city-selection-item(href="#") Ярославль
+					a.city-selection-item(href="#") Воронеж
+					a.city-selection-item(href="#") Краснодар						
+					a.city-selection-item(href="#") Самара
+					a.city-selection-item(href="#") Перьм
+					a.city-selection-item(href="#") Уфа
