--- a/src/pug/pages/ui/city-selection.pug
+++ b/src/pug/pages/ui/city-selection.pug
@@ -5,8 +5,9 @@ block variables
 	- var pageClass = 'body--dashboard';
 
 block content
-	.container.container--left
+	.container
 		.section-ui
+			.title Выбор городов
 			
 			.city-selection-wrapper
 				.selection-block-head
