--- a/src/less/blocks/_city-selection.less
+++ b/src/less/blocks/_city-selection.less
@@ -3,21 +3,37 @@
 	width: 100vw;
 	height: 100vh;
 	
-	@media @tablet{
+	@media (min-width: 784px) {
 		width: 360px;
 		height: 650px;
+	}
+	@media (min-width: 1154px){
+		border-left: 1px solid @borderMenu;
+		border-bottom: 1px solid @borderMenu;
 	} 
+
 }
-.selection-block-head{
-	// min-width: 349px;
+.selection-block-head{	
 	position: sticky;
 	left: 0;
 	right: 0;
 	top: 0;	
 	background-color: #fff;
 	z-index: 1;
-	 @media @tablet{width: 349px;}
+	 @media (min-width: 784px){width: 360px;}
 }
+.selection-block-head:after{
+	content:'';
+	width: 8px;
+	height: 110px;
+	position: absolute;
+	right: 0;
+	top: 0;
+	background-color: #DBDBDB;
+	@media (min-width: 1154px){width: 9px;}
+
+}
+
 .close-selection{
 	display: block;
 	width: 12px;
@@ -72,17 +88,3 @@
 	color: lighten(@btn-text-buy-click, 25%);
 	text-decoration: none;
 	}
-
-/* 
-.grey-skin.city-selection-wrapper.scrollable .thumb{
-	border-radius: 10px;	
-	background-color: #acacac;
-}
-
-.grey-skin.scrollable .scroll-bar.vertical{
-	width: 8px;
-}
-.grey-skin.scrollable .scroll-bar{	
-	background-color: @body-bg;
-}
- */
