citi selector added

--- a/src/pug/sections/header-top.pug
+++ b/src/pug/sections/header-top.pug
@@ -5,7 +5,7 @@
 			.col-6.col-lg-4.d-flex
 				.header-info__block.d-flex
 					img(src="../img/icons/marker.svg" alt="иконка")
-					a(href="#").menu-icon
+					a.city-toggle(href="#").menu-icon
 						span Санкт-Петербург
 			.col-lg-4.d-none.d-lg-flex
 				+header-info__item("../img/icons/car.svg", "Доставка по всей России")(class="mr-20")
@@ -13,6 +13,8 @@
 			.col-6.col-lg-4.d-flex.justify-content-end
 				+header-info__item("../img/icons/phone.svg", "+7 (495) 132-62-60")
 				.header-info__block.d-none.d-md-block.ml-10 +7 (800) 222-63-30
+
+		include ../sections/_city-selection.pug
 
 .header-menu
 	.container
