--- a/src/less/blocks/_city-selection.less
+++ b/src/less/blocks/_city-selection.less
@@ -1,15 +1,25 @@
 .city-selection-wrapper {
-	position: relative;
-	width: 100vw;
-	height: 100vh;
+	display: none;
+	position: fixed;
+	left:0;
+	top:0;
+	bottom:0;
+	z-index:2000;
+	width: 100%;
 	
 	@media (min-width: 784px) {
 		width: 360px;
-		height: 650px;
+		top:37px;
+		
 	}
 	@media (min-width: 1154px){
-		border-left: 1px solid @borderMenu;
-		border-bottom: 1px solid @borderMenu;
+		position: absolute;
+		left:auto;
+		top:auto;
+		bottom:0px;
+		transform:translateY(100%);
+		height: 650px;
+		box-shadow: 0px 2px 6px rgba(154, 154, 154, 0.55);		
 	} 
 
 }
@@ -21,17 +31,6 @@
 	background-color: #fff;
 	z-index: 1;
 	 @media (min-width: 784px){width: 360px;}
-}
-.selection-block-head:after{
-	content:'';
-	width: 8px;
-	height: 110px;
-	position: absolute;
-	right: 0;
-	top: 0;
-	background-color: #DBDBDB;
-	@media (min-width: 1154px){width: 9px;}
-
 }
 
 .close-selection{
@@ -75,14 +74,18 @@
 		font-size: 18px;
 	}
 }
+
+
 .city-selection-item{
 	display: block;
 	height: 40px;
 	padding-left: 16px;
+	padding-right: 16px;
 	font-size: 16px;
 	padding-top: 8px;
 	color: @btn-text-buy-click;
 	border-bottom: 1px solid @borderMenu;
+	background-color: @white;
 }
 .city-selection-item:hover{
 	color: lighten(@btn-text-buy-click, 25%);
