filter small is done

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -23,6 +23,8 @@
 @import "blocks/_inputs.less";
 @import "blocks/_checkbox.less";
 @import "blocks/_catalogue-pagination.less";
+@import "blocks/_filter-small.less";
+
 
 // Sections
 @import "sections/_ui-nav-panel"; // Left panel in documentation
