--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -35,6 +35,8 @@
 			+linkLeftPanel("Карточка раздела", "section-card.html")
 			+linkLeftPanel("Социальные сети", "social.html")
 			+linkLeftPanel("Пагинация", "pagination.html")
+			+linkLeftPanel("Фильтр - маленький", "filter-small.html")
+
 
 
 	.left-panel__section
