first-commit-accordeon

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -26,6 +26,7 @@
 @import "blocks/_checkbox.less";
 @import "blocks/_catalogue-pagination.less";
 @import "blocks/_badges.less";
+@import "blocks/_ui-accodeon.less";
 
 
 // Sections
