--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -39,6 +39,7 @@
 			+linkLeftPanel("Бейдж", "badges.html")
 			+linkLeftPanel("Социальные сети", "social.html")
 			+linkLeftPanel("Пагинация", "pagination.html")
+			+linkLeftPanel("Аккордеон", "ui-accordeon.html")
 
 
 	.left-panel__section
