--- a/src/less/base/_variables.less
+++ b/src/less/base/_variables.less
@@ -35,6 +35,7 @@
 @btn-blue: #0073AF;
 @btn-store: #B5B5CC;
 @btn-green: #60B6A8;
+@accordeon-bg: #89B8E1;
 
 //color for button background hover, focus, active
 @btn-cart-hover: #EF8C22;
