--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -20,6 +20,7 @@
 			+linkLeftPanel("Вертикальный ритм", "vertical-grid.html")
 			+linkLeftPanel("Формы", "forms.html")
 			+linkLeftPanel("Хлебные крошки", "bread-crumb.html")
+			+linkLeftPanel("Кнопки для фильтра и счетчика", "btn-plus-minus.html")
 
 
 	.left-panel__section
