--- a/src/less/main.less
+++ b/src/less/main.less
@@ -25,7 +25,8 @@
 @import "blocks/_inputs.less";
 @import "blocks/_checkbox.less";
 @import "blocks/_catalogue-pagination.less";
-@import "blocks/_badges.less";
+@import "blocks/_btn-plus-minus.less";
+
 
 
 // Sections
