--- a/src/less/blocks/_bread-crumb.less
+++ b/src/less/blocks/_bread-crumb.less
@@ -10,7 +10,8 @@
 	position: relative;
 	margin-right: 16px;
 	font-size: 16px;
-	color: @btn-text-buy-click;	
+	color: @btn-text-buy-click;
+	padding-top: @l1;
 }
 .breadcrumb-item:not(:last-child):hover{
 	color: @text-red;
