--- a/src/less/main.less
+++ b/src/less/main.less
@@ -40,6 +40,9 @@
 @import "sections/_footer-subscribe";
 
 // Pages
+@import "pages/catalog";
+
+
 // Utils - Always Last - !IMPORTANT
 @import "utils/_margins";
 @import "utils/_paddings";
