--- a/src/less/utils/_utils.less
+++ b/src/less/utils/_utils.less
@@ -39,7 +39,10 @@
 .strong {
 	font-weight: 700;
 }
-
+/* Font properties */
+.uppercase {
+	text-transform: uppercase;
+}
 /* Flex */
 
 .flex-grow {
