--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -60,6 +60,6 @@
 		p.strong Страницы
 		.left-panel-nav
 			+linkLeftPanel("Главная", "../main.html")
-			//- +linkLeftPanel("Каталог", "../catalog.html")
+			+linkLeftPanel("Каталог", "../catalog.html")
 
 #ui-nav-toggle Скрыть/Показать навигацию
