--- a/src/pug/pages/ui/filter-small.pug
+++ b/src/pug/pages/ui/filter-small.pug
@@ -11,13 +11,15 @@ block content
 		.section-ui
 			.filter-small
 				.filter-small-check.menu-icon
-				.filter-small-item.filter-small-item--active По популярности
-				.filter-small-item Новинки
-				.filter-small-item По возрастанию цены
-				.filter-small-item По убыванию цены
-			pre.
-				.filter-small
-					.filter-small-check.menu-icon
+				.filter-small-item-block
+					.filter-small-item.filter-small-item--active По популярности
+					.filter-small-item Новинки
+					.filter-small-item По возрастанию цены
+					.filter-small-item По убыванию цены
+		pre.
+			.filter-small
+				.filter-small-check.menu-icon
+				.filter-small-item-block
 					.filter-small-item.filter-small-item--active По популярности
 					.filter-small-item Новинки
 					.filter-small-item По возрастанию цены
