--- a/src/less/blocks/_drop-down.less
+++ b/src/less/blocks/_drop-down.less
@@ -1,4 +1,4 @@
-.filter-small {
+.drop-down {
 	position: relative;
 	width: 184px;
 	line-height: 1;
@@ -9,13 +9,13 @@
 	.icon-mixin(@textMenu, 15px, 12px);
 	}
 }
-.filter-small-check {
+.drop-down-check {
 	padding-bottom: 14px;
 	padding-top: 8px;
 	position: relative;
 	line-height: 1;
 }
-.filter-small-item-block {
+.drop-down-item-block {
 	position: absolute;
 	background-color: @white;
 	top: 37px;
@@ -25,7 +25,7 @@
 		display: inline-block;
 	}
 }
-.filter-small-item {
+.drop-down-item {
 	margin-left: 14px;
 	padding-top: 12px;
 	padding-bottom: 2px;
