--- a/src/less/main.less
+++ b/src/less/main.less
@@ -23,7 +23,7 @@
 @import "blocks/_inputs.less";
 @import "blocks/_checkbox.less";
 @import "blocks/_catalogue-pagination.less";
-@import "blocks/_filter-small.less";
+@import "blocks/_drop-down.less";
 
 
 // Sections
