--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -35,7 +35,7 @@
 			+linkLeftPanel("Карточка раздела", "section-card.html")
 			+linkLeftPanel("Социальные сети", "social.html")
 			+linkLeftPanel("Пагинация", "pagination.html")
-			+linkLeftPanel("Фильтр - маленький", "filter-small.html")
+			+linkLeftPanel("Выпадающий список", "drop-down.html")
 
 
 
