--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -40,6 +40,7 @@
 			+linkLeftPanel("Бейдж", "badges.html")
 			+linkLeftPanel("Социальные сети", "social.html")
 			+linkLeftPanel("Пагинация", "pagination.html")
+			+linkLeftPanel("Фото товара", "photo-of-product.html")
 
 
 	.left-panel__section
