new pictures added

--- a/src/pug/pages/ui/photo-of-product.pug
+++ b/src/pug/pages/ui/photo-of-product.pug
@@ -18,12 +18,12 @@ block content
 						.thumbnails__image(data-img-path = "../img/goods/purse_blue/blue-purse-1.jpg")
 							img(src="../img/good_thumbnail/blue-purse/thumb_blue-purse-1.png"  alt="Картикна товара")
 						
-						.thumbnails__image(data-img-path = "../img/goods/purse_blue/blue-purse-2.png")
+						.thumbnails__image(data-img-path = "../img/goods/purse_blue/blue-purse-2.jpg")
 							img(src="../img/good_thumbnail/blue-purse/thumb_blue-purse-2.png" alt="Картикна товара")
 						
-						.thumbnails__image(data-img-path = "../img/goods/purse_blue/blue-purse-3.png")
+						.thumbnails__image(data-img-path = "../img/goods/purse_blue/blue-purse-3.jpg")
 							img(src="../img/good_thumbnail/blue-purse/thumb_blue-purse-3.png" alt="Картинка товара")
 						
-						.thumbnails__image(data-img-path = "../img/goods/purse_blue/blue-purse-4.png")
+						.thumbnails__image(data-img-path = "../img/goods/purse_blue/blue-purse-4.jpg")
 							img(src="../img/good_thumbnail/blue-purse/thumb_blue-purse-4.png" alt="Картикна товара")
 					
