--- a/src/less/blocks/_ui-accodeon.less
+++ b/src/less/blocks/_ui-accodeon.less
@@ -1,5 +1,96 @@
-.accordion-container{width: 100%;}
-.accordion-container .accordion-input-label{	
+.accordion{
+	width: 100%;
+	/* border-right: 1px solid @accordeon-bg;
+	border-left: 1px solid @accordeon-bg; */
+	border: 1px solid @accordeon-bg;
+	border-bottom: 0px;
+}
+.accordion-item:last-childe .accordion-item__title{border-bottom: 0px;}
+
+.accordion-item__title{
+	padding-left: 18px;
+	padding-top: 16px;
+	font-size: 16px;
+	color:@accordeon-bg;
+	position: relative;	
+	height: 54px;
+	width: 100%;
+	transition: all .8s;
+	border-bottom: 1px solid @accordeon-bg;
+	@media @desktop {
+		font-size: 18px;
+		height: 60px;}
+}
+.accordion-item__title:after{
+	cursor: pointer;
+	content:'';
+	width: 15px;
+	height: 15px;
+	position: absolute;
+	top: 19px;
+	right: 15px;
+	background: url(../../img/icons/ac-arrow-right.svg) center no-repeat;
+}
+.accordion-item__title--active{
+	background-color: @accordeon-bg;
+	color:@white;
+}
+.accordion-item__title--active:after{
+	cursor: pointer;
+	content:'';
+	width: 15px;
+	height: 15px;
+	position: absolute;
+	top: 19px;
+	right: 15px;
+	background: url(../../img/icons/ac-arrow-down.svg) center no-repeat;
+}
+.accordion-item__content{
+	padding: 24px;
+	
+	border-bottom: 1px solid @accordeon-bg;
+	& p {
+		font-size: 14px;
+		color: @text-light-grey;
+		margin: 0;
+		padding: 0;
+		@media @desktop {font-size: 16px;}
+	}
+
+}
+.accordion-item__content--hide{
+	display: none;
+}
+
+.accordion-item__content:last-childe{border-bottom: 0px;}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .accordion-container .accordion-input-label{	
 	padding: 16px;
 	position: relative;
 	z-index: 20;
@@ -83,4 +174,4 @@
 .accordion-container .accordion-input:checked ~ .accordion-article.accordion-large{
 	height: 230px;
 	@media @desktop{height: 257px;}
-}
+} */
