--- a/src/pug/pages/ui/ui-accordeon.pug
+++ b/src/pug/pages/ui/ui-accordeon.pug
@@ -11,44 +11,46 @@ block content
 		.section-ui
 			.row
 				.col-lg-6
-					.accordion-container
-						.accordion-container-item
-							input.accordion-input(id="accordion-1" name="accordion-1" type="checkbox")
-							label.accordion-input-label(for="accordion-1") Описание
-							article.accordion-article.accordion-large
-								p.accordion-article__item Высота: 12см
-								p.accordion-article__item Ширина: 12см
-								p.accordion-article__item Размер: 12см
-								p.accordion-article__item Отделений для пластиковых карт: 12см
-								p.accordion-article__item Отделений для купюр: 12см
-								p.accordion-article__item Застежка: 12см
-								p.accordion-article__item Отделение для монет: 12см
-								p.accordion-article__item Тип сложения: 12см
-								p.accordion-article__item Ремешок: 12см
-						.accordion-container-item
-							input.accordion-input(id="accordion-2" name="accordion-2" type="checkbox")
-							label.accordion-input-label(for="accordion-2") Характеристики
-							article.accordion-article.accordion-medium
-								p.accordion-article__item Отделений для пластиковых карт: 12см
-								p.accordion-article__item Отделений для купюр: 12см
-								p.accordion-article__item Застежка: 12см
-								p.accordion-article__item Отделение для монет: 12см
-								p.accordion-article__item Тип сложения: 12см
-								p.accordion-article__item Ремешок: 12см
-						.accordion-container-item
-							input.accordion-input(id="accordion-3" name="accordion-3" type="checkbox")
-							label.accordion-input-label(for="accordion-3") Доставка
-							article.accordion-article.accordion-medium
-								p.accordion-article__item Отделений для пластиковых карт: 12см
-								p.accordion-article__item Отделений для купюр: 12см
-								p.accordion-article__item Застежка: 12см
-								p.accordion-article__item Отделение для монет: 12см
-								p.accordion-article__item Тип сложения: 12см
-								p.accordion-article__item Ремешок: 12см
-						.accordion-container-item
-							input.accordion-input(id="accordion-4" name="accordion-4" type="checkbox")
-							label.accordion-input-label(for="accordion-4") Наличие в 3 магазинах
-							article.accordion-article.accordion-small
-								p.accordion-article__item ТЦ Оранж, ул. Мирная, дом 125
-								p.accordion-article__item ТЦ Гранд, ул. Мирная, дом 125
-								p.accordion-article__item ТД Центральный, ул. Мирная, дом 125
+					.accordion
+						.accordion-item
+							.accordion-item__title Описание
+							.accordion-item__content.accordion-item__content--hide
+								p Высота: 12см
+								p Ширина: 12см
+								p Размер: 12см
+								p Отделений для пластиковых карт: 12см
+								p Отделений для купюр: 12см
+								p Застежка: 12см
+								p Отделение для монет: 12см
+								p Тип сложения: 12см
+								p Ремешок: 12см
+
+						.accordion-item
+							.accordion-item__title Характеристики
+							.accordion-item__content.accordion-item__content--hide
+								p Высота: 12см
+								p Ширина: 12см
+								p Размер: 12см
+								p Отделений для пластиковых карт: 12см
+								p Отделений для купюр: 12см
+								p Застежка: 12см
+								p Отделение для монет: 12см
+								p Тип сложения: 12см
+								p Ремешок: 12см
+
+						.accordion-item
+							.accordion-item__title Доставка
+							.accordion-item__content.accordion-item__content--hide
+								p Почта России
+								p CDEK
+								p PonyExpress
+								p Курьерская доставка
+								p ТК Деловые Линии
+
+						.accordion-item
+							.accordion-item__title В наличии в 3 магазинах
+							.accordion-item__content.accordion-item__content--hide						
+								p ТЦ Оранж, ул Мира, 12
+								p ТЦ Гранд, ул Московская, 25
+								p ТД Центральный, ул Гагарина, 8
+								
