--- a/src/less/pages/catalog.less
+++ b/src/less/pages/catalog.less
@@ -4,13 +4,16 @@
 }
 .catalog-filter {
 	position: absolute;
-	z-index: 1;
+	z-index: 1001;
 	background-color: @white;
-	top: 37px;
+	top: 51px;
 	left: -360px;
-	height: 100%;
+	height: 100vh;
 	overflow: hidden;
 	transition: left 0.5s ease-in;
+	@media @tablet {
+		top: 37px;
+	}
 	@media @desktop {
 		position: relative;
 		display: flex;
@@ -18,7 +21,9 @@
 		flex-basis: 0;
 		width: 100%;
 		left: 0;
-		transition: none;	
+		top: 0;
+		transition: none;
+		overflow: visible;
 	}
 }
 .form-filter {
@@ -40,17 +45,20 @@
 		padding-left: 23px;
 		position: relative;
 	}
-	&:after {
-		position: absolute;
-		content: url('../img/icons/filter-icon.svg');
-		left: 13px;
-		@media @desktop {
-			display: none;
-		}
-	}
 	@media @desktop {
 		justify-content: flex-end;
 		.catalog-filters__title {
+			display: none;
+		}
+	}
+}
+.catalog-filters__title {
+	position: relative;
+	&:before {
+		position: absolute;
+		content: url('../img/icons/filter-icon.svg');
+		left: -8px;
+		@media @desktop {
 			display: none;
 		}
 	}
@@ -77,4 +85,26 @@
 	@media @desktop {
 		transition: none;
 	}
+}
+.catalog__title{
+	text-align: center;
+	&-count {
+		color: @gray;
+	}
+}
+.catalog__title-description {
+	line-height: 23px;
+	font-size: 18px;
+	text-align: center;
+	letter-spacing: 0.05em;
+	color: @text-light-grey;
+	width: 888px;
+	margin-left: auto;
+	margin-right: auto;
+	padding-bottom: 52px;
+}
+.catalog-badge {
+	display: flex;
+	justify-content: center;
+	padding-bottom: 47px;
 }
