added badges on desktop view

--- a/src/pug/pages/catalog.pug
+++ b/src/pug/pages/catalog.pug
@@ -22,6 +22,11 @@ block content
 					+badgeFilter('Портмоне', 'badge-pink')
 					+badgeFilter('Органайзеры', 'badge-orange')
 			.catalog-filters
+				.catalog-filters__badge
+					.filter-name.catalog-filters__badge-item Мужчины
+						.filter-close
+					.filter-name.catalog-filters__badge-item Кошельки
+						.filter-close
 				.catalog-filters__title Фильтр
 				.catalog-filters-small__title Фильтр маленький
 			.catalog-wrapper
