--- a/src/less/main.less
+++ b/src/less/main.less
@@ -19,7 +19,7 @@
 @import "blocks/_banner.less";
 @import "blocks/_city-selection.less";
 @import "blocks/_forms.less";
-
+@import "blocks/_badges.less";
 @import "blocks/_bread-crumb.less";
 @import "blocks/_filter.less";
 @import "blocks/_inputs.less";
