--- a/src/less/pages/catalog.less
+++ b/src/less/pages/catalog.less
@@ -46,7 +46,7 @@
 		position: relative;
 	}
 	@media @desktop {
-		justify-content: flex-end;
+		justify-content: space-between;
 		.catalog-filters__title {
 			display: none;
 		}
@@ -93,18 +93,39 @@
 	}
 }
 .catalog__title-description {
-	line-height: 23px;
-	font-size: 18px;
-	text-align: center;
-	letter-spacing: 0.05em;
-	color: @text-light-grey;
-	width: 888px;
-	margin-left: auto;
-	margin-right: auto;
-	padding-bottom: 52px;
+	display: none;
+	@media @desktop {
+		display: block;
+		line-height: 23px;
+		font-size: 18px;
+		text-align: center;
+		letter-spacing: 0.05em;
+		color: @text-light-grey;
+		width: 888px;
+		margin-left: auto;
+		margin-right: auto;
+		padding-bottom: 52px;
+	}
 }
 .catalog-badge {
-	display: flex;
-	justify-content: center;
-	padding-bottom: 47px;
+	display: none;
+	@media @desktop {
+		display: flex;
+		justify-content: center;
+		padding-bottom: 47px;
+	}
+}
+.catalog-filters__badge {
+	display: none;
+	@media @desktop {
+		display: block;
+		margin-left: 300px;
+	}
+}
+.catalog-filters__badge-item {
+	@media @desktop {
+		&:not(:first-child) {
+			margin-left: 16px;
+		}
+	}
 }
