heart icon added and script added

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -27,6 +27,7 @@
 @import "blocks/_catalogue-pagination.less";
 @import "blocks/_btn-plus-minus.less";
 @import "blocks/_photo-of-product.less";
+@import "blocks/_icons.less";
 
 
 
