--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -28,6 +28,7 @@
 		.left-panel-nav
 
 			+linkLeftPanel("Баннеры", "banner.html")
+			+linkLeftPanel("Иконки", "icons.html")
 			//- +linkLeftPanel("Баннер красный", "#")
 			//- +linkLeftPanel("Баннер с картинкой", "#")
 			+linkLeftPanel("Кнопки", "buttons.html")
