--- a/src/less/blocks/_card-product.less
+++ b/src/less/blocks/_card-product.less
@@ -26,10 +26,15 @@
 	position: absolute;
 	top: 16px;
 	right: 16px;
-	color: #e1e1e1;
-	transition: color 1s;
+	color: @heart;
+	transition: color 0.5s;
 	&:hover {color: @red;}
 	@media @desktop { top: 10px; }
+}
+
+.card-heart-icon--red {
+	transition: color 0.5s;
+	color:@red;
 }
 
 .card-product__img {
