--- a/src/less/base/_variables.less
+++ b/src/less/base/_variables.less
@@ -50,6 +50,8 @@
 @text-light-grey: #58595B;
 
 @text-salad:#019795;
+@notify-exist: #009430;
+@notify-not: #0073B2;
 
 @textMenu: #58595B;
 @borderMenu: #C4C4C4;;
