--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -21,6 +21,7 @@
 			+linkLeftPanel("Формы", "forms.html")
 			+linkLeftPanel("Хлебные крошки", "bread-crumb.html")
 			+linkLeftPanel("Кнопки для фильтра и счетчика", "btn-plus-minus.html")
+			+linkLeftPanel("Извещение о наличии товара", "stock-notify.html")
 
 
 	.left-panel__section
