--- a/src/pug/pages/ui/btn-plus-minus.pug
+++ b/src/pug/pages/ui/btn-plus-minus.pug
@@ -12,8 +12,8 @@ block content
 			.filter-name Мужчинам
 				.filter-close
 		pre.
-			.section-ui
 			.filter-name Мужчинам
+				.filter-close
 		
 		.btn-counter.btn-counter--plus
 		pre.
