--- a/src/less/blocks/_btn-plus-minus.less
+++ b/src/less/blocks/_btn-plus-minus.less
@@ -25,12 +25,23 @@
 	
 .btn-counter{
 	cursor: pointer;
-	display: inline-block;
-	width: 40px;
-	height: 40px;
+	// display: inline-block;
+	width: 32px;
+	height: 32px;
 	border-radius: 50%;
 	border: 1px solid @btn-text-buy-click;	
 }
 .btn-counter--plus{background: url(../../img/icons/plus.svg) no-repeat center;}
 .btn-counter--minus{background: url(../../img/icons/minus.svg) no-repeat center;}
+
+.product-counter {
+	display: flex;
+	align-items: center;
+	
+	span {
+		text-align: center;
+		width: 38px;
+	}
+
+}
 	
