--- a/src/pug/pages/ui/btn-plus-minus.pug
+++ b/src/pug/pages/ui/btn-plus-minus.pug
@@ -22,3 +22,14 @@ block content
 		.btn-counter.btn-counter--minus
 		pre.
 			.btn-counter.btn-counter--plus
+
+		.title Счетчик товара
+		.product-counter
+			.btn-counter.btn-counter--minus
+			span 1
+			.btn-counter.btn-counter--plus
+		pre.
+			.product-counter
+				.btn-counter.btn-counter--minus
+				span 1
+				.btn-counter.btn-counter--plus
