--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -20,7 +20,7 @@
 			+linkLeftPanel("Вертикальный ритм", "vertical-grid.html")
 			+linkLeftPanel("Формы", "forms.html")
 			+linkLeftPanel("Хлебные крошки", "bread-crumb.html")
-			+linkLeftPanel("Кнопки для фильтра и счетчика", "btn-plus-minus.html")
+			+linkLeftPanel("Кнопки для фильтра и счетчик товара", "btn-plus-minus.html")
 
 
 	.left-panel__section
@@ -40,7 +40,7 @@
 			+linkLeftPanel("Бейдж", "badges.html")
 			+linkLeftPanel("Социальные сети", "social.html")
 			+linkLeftPanel("Пагинация", "pagination.html")
-
+	
 
 	.left-panel__section
 		p.strong Секции
