--- a/src/pug/pages/ui/ui-accordeon.pug
+++ b/src/pug/pages/ui/ui-accordeon.pug
@@ -10,11 +10,11 @@ block content
 		
 		.section-ui
 			.row
-				.col-lg-6
+				.col-md-6.col-lg-5.offset-lg-1
 					.accordion
 						.accordion-item
-							.accordion-item__title Описание
-							.accordion-item__content.accordion-item__content--hide
+							.accordion-item__title.accordion-item__title--active Описание
+							.accordion-item__content
 								p Высота: 12см
 								p Ширина: 12см
 								p Размер: 12см
@@ -53,4 +53,21 @@ block content
 								p ТЦ Оранж, ул Мира, 12
 								p ТЦ Гранд, ул Московская, 25
 								p ТД Центральный, ул Гагарина, 8
-								
+			br
+			.string код для блока Аккордеон
+			pre.
+				.row
+					.col-md-6.col-lg-5.offset-lg-1
+						.accordion
+							.accordion-item
+								.accordion-item__title.accordion-item__title--active Описание
+								.accordion-item__content
+									p Высота: 12см
+									p Ширина: 12см
+									p Размер: 12см
+							.accordion-item
+								.accordion-item__title Характеристики
+								.accordion-item__content.accordion-item__content--hide
+									p Высота: 12см
+									p Ширина: 12см
+									p Размер: 12см
