--- a/src/less/blocks/_ui-accodeon.less
+++ b/src/less/blocks/_ui-accodeon.less
@@ -1,25 +1,25 @@
 .accordion{
-	width: 100%;
-	/* border-right: 1px solid @accordeon-bg;
-	border-left: 1px solid @accordeon-bg; */
+	width: 100%;	
 	border: 1px solid @accordeon-bg;
 	border-bottom: 0px;
 }
 .accordion-item:last-childe .accordion-item__title{border-bottom: 0px;}
 
 .accordion-item__title{
-	padding-left: 18px;
-	padding-top: 16px;
+	padding-left: 14px;
+	padding-top: 8px;
 	font-size: 16px;
 	color:@accordeon-bg;
 	position: relative;	
-	height: 54px;
+	height: 40px;
 	width: 100%;
 	transition: all .8s;
 	border-bottom: 1px solid @accordeon-bg;
 	@media @desktop {
+		padding-left: 20px;
+		padding-top: 16px;
 		font-size: 18px;
-		height: 60px;}
+		height: 54px;}
 }
 .accordion-item__title:after{
 	cursor: pointer;
@@ -27,9 +27,10 @@
 	width: 15px;
 	height: 15px;
 	position: absolute;
-	top: 19px;
-	right: 15px;
+	top: 12px;
+	right: 20px;
 	background: url(../../img/icons/ac-arrow-right.svg) center no-repeat;
+	@media @desktop{top: 19px;}
 }
 .accordion-item__title--active{
 	background-color: @accordeon-bg;
@@ -41,14 +42,15 @@
 	width: 15px;
 	height: 15px;
 	position: absolute;
-	top: 19px;
-	right: 15px;
+	top: 12px;
+	right: 20px;
 	background: url(../../img/icons/ac-arrow-down.svg) center no-repeat;
+	@media @desktop{top: 19px;}
 }
 .accordion-item__content{
-	padding: 24px;
-	
-	border-bottom: 1px solid @accordeon-bg;
+	padding: 16px;	
+	border-bottom: 1px solid @accordeon-bg;	
+	@media @desktop {padding: 24px;}
 	& p {
 		font-size: 14px;
 		color: @text-light-grey;
@@ -56,122 +58,6 @@
 		padding: 0;
 		@media @desktop {font-size: 16px;}
 	}
-
 }
-.accordion-item__content--hide{
-	display: none;
-}
-
-.accordion-item__content:last-childe{border-bottom: 0px;}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* .accordion-container .accordion-input-label{	
-	padding: 16px;
-	position: relative;
-	z-index: 20;
-	display: block;
-	height: 54px;
-	cursor: pointer;
-	color: @accordeon-bg;
-	font-size: 16px;
-	background: @white;
-	border: 1px solid  @accordeon-bg;;
-	margin-bottom: 0;
-	transition: all 1s;
-	@media @desktop{font-size: 18px;}
-}
-
-.accordion-container .accordion-input-label:after{
-    content: '';
-	position: absolute;
-	width: 24px;
-	height: 24px;
-	right: 0px;
-	top: 20px; 	
-    background-image: url(../../img/icons/ac-arrow-right.svg);
-    background-repeat: no-repeat;   
-}
-
-.accordion-container .accordion-input-label:hover{
-	background: darken(@white, 1%);
-}
-.accordion-container .accordion-input:checked + .accordion-input-label,
-.accordion-container .accordion-input:checked + .accordion-input-label:hover{
-	background: @accordeon-bg;
-	color: @white;
-}
-
-.accordion-container .accordion-input:checked, 
-.accordion-container .accordion-input:checked + .accordion-input-label:hover:after{
-	content: '';
-	position: absolute;
-	width: 24px;
-	height: 24px;
-	right: 16px;
-	top: 16px;
-	background: transparent url(../../img/icons/ac-arrow-down.svg) no-repeat center center;	
-}
-.accordion-container .accordion-input{
-	display: none;
-}
-.accordion-container .accordion-article{
-	font-size: 14px;
-	color: @text-light-grey;	
-	background: #fff;
-	margin-top: -1px;
-	overflow: hidden;
-	height: 0px;
-	padding-left: 24px;
-	position: relative;
-	z-index: 10;	
-	transition: height 0.3s ease-in-out;
-	@media @desktop{font-size: 16px;}
-}
-.accordion-article__item{
-	padding: 0;
-	margin: 0;		
-}
-.accordion-article__item:first-child{
-	padding-top: 24px;
-}
-.accordion-container .accordion-input:checked ~ .accordion-article{	
-	transition: height 0.5s ease-in-out;
-	border: 1px solid @accordeon-bg;
-}
-.accordion-container .accordion-input:checked ~ .accordion-article.accordion-small{
-	height: 120px;
-	@media @desktop{height: 140px;}
-}
-.accordion-container .accordion-input:checked ~ .accordion-article.accordion-medium{
-	height: 160px;
-	@media @desktop{height: 180px;}
-}
-.accordion-container .accordion-input:checked ~ .accordion-article.accordion-large{
-	height: 230px;
-	@media @desktop{height: 257px;}
-} */
+.accordion-item__content--hide{display: none;}
+	
