--- a/src/less/base/_variables.less
+++ b/src/less/base/_variables.less
@@ -53,8 +53,9 @@
 
 @textMenu: #58595B;
 @borderMenu: #C4C4C4;;
-
+@border-passive: #c0c0c0;
 @text-card: #58595B;
+@contacts-text: #7E848C;
 
 
 //-color for background
