--- a/src/less/main.less
+++ b/src/less/main.less
@@ -39,6 +39,7 @@
 @import "sections/_header-top";
 @import "sections/_catalogue-section.less";
 @import "sections/_footer-subscribe";
+@import "sections/_contact-info.less";
 
 // Pages
 // Utils - Always Last - !IMPORTANT
