add cursor pointer for title

--- a/src/less/blocks/_ui-accodeon.less
+++ b/src/less/blocks/_ui-accodeon.less
@@ -6,6 +6,7 @@
 .accordion-item:last-childe .accordion-item__title{border-bottom: 0px;}
 
 .accordion-item__title{
+	cursor: pointer;
 	padding-left: 14px;
 	padding-top: 8px;
 	font-size: 16px;
