form order and subscribe

--- a/src/less/blocks/_buttons.less
+++ b/src/less/blocks/_buttons.less
@@ -174,13 +174,7 @@
 
 @media @desktop {
 	.button-wide {
-		width: 344px;
-	}
-}
-
-@media @desktopXL {
-	.button-wide {
-		width: 330px;
+		width: 100%;
 	}
 }
 
