--- a/src/less/main.less
+++ b/src/less/main.less
@@ -26,6 +26,8 @@
 @import "blocks/_checkbox.less";
 @import "blocks/_catalogue-pagination.less";
 @import "blocks/_btn-plus-minus.less";
+@import "blocks/_order-subscribe.less";
+
 
 
 
