--- a/src/pug/pages/ui/buttons.pug
+++ b/src/pug/pages/ui/buttons.pug
@@ -23,12 +23,11 @@ block content
 			+button-detail('Подробнее','#')
 		
 		.section-ui
-			.ui-title Адаптивные кнопки
-			.row
-				.col-auto
-					+button-buyclick("Купить в 1 клик", "#")
-				.col-auto
-					+button-addcart("Добавить в корзину", "#")
+			.ui-title Купить в 1 клик
+			+button-buyclick("Купить в 1 клик", "#")
+		.section-ui
+			.ui-title Добавить в корзину
+			+button-addcart("Добавить в корзину", "#")
 		pre.
 			+button-buyclick("Купить в 1 клик", "#")
 			+button-addcart("Добавить в корзину", "#")
