--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -40,6 +40,8 @@
 			+linkLeftPanel("Бейдж", "badges.html")
 			+linkLeftPanel("Социальные сети", "social.html")
 			+linkLeftPanel("Пагинация", "pagination.html")
+			+linkLeftPanel("Форма заказа и подписки", "order-subscribe.html")
+
 
 
 	.left-panel__section
