--- a/src/less/blocks/_drop-down.less
+++ b/src/less/blocks/_drop-down.less
@@ -21,13 +21,14 @@
 	top: 37px;
 	display: none;
 	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+	padding-bottom: 13px;
 	&--show {
 		display: inline-block;
 	}
 }
 .drop-down-item {
 	margin-left: 14px;
-	padding-top: 12px;
+	padding-top: 19px;
 	padding-bottom: 2px;
 	font-size: 16px;
 	display: inline-block;
