Remove favourite icon task

--- a/src/less/blocks/_card-product.less
+++ b/src/less/blocks/_card-product.less
@@ -27,14 +27,8 @@
 	top: 16px;
 	right: 16px;
 	color: @heart;
-	transition: color 0.5s;
-	&:hover {color: @red;}
+	cursor: pointer;
 	@media @desktop { top: 10px; }
-}
-
-.card-heart-icon--red {
-	transition: color 0.5s;
-	color:@red;
 }
 
 .card-product__img {
