script update abd some changes

--- a/src/pug/layouts/page-layout/_foot.pug
+++ b/src/pug/layouts/page-layout/_foot.pug
@@ -9,4 +9,5 @@ script(src="js/main.js")
 script(src="js/input.js")
 script(src="js/filter-menu.js")
 script(src="js/city-selector.js")
+script(src="js/accordeon.js")
 script(defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js")
