--- a/src/less/blocks/_ui-accodeon.less
+++ b/src/less/blocks/_ui-accodeon.less
@@ -17,6 +17,7 @@
 	width: 100%;
 	transition: all .8s;
 	border-bottom: 1px solid @accordeon-bg;
+	cursor: pointer;
 	@media @desktop {
 		font-size: 18px;
 		height: 60px;}
@@ -46,6 +47,7 @@
 	background: url(../../img/icons/ac-arrow-down.svg) center no-repeat;
 }
 .accordion-item__content{
+	display: none;
 	padding: 24px;
 	
 	border-bottom: 1px solid @accordeon-bg;
@@ -57,9 +59,6 @@
 		@media @desktop {font-size: 16px;}
 	}
 
-}
-.accordion-item__content--hide{
-	display: none;
 }
 
 .accordion-item__content:last-childe{border-bottom: 0px;}
