--- a/src/pug/layouts/ui-layout/_foot.pug
+++ b/src/pug/layouts/ui-layout/_foot.pug
@@ -7,4 +7,5 @@ block scripts
 script(src="../js/main.js")
 script(src="../js/input.js")
 script(src="../js/filter-menu.js")
+script(src="../js/accordeon.js")
 script(defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js")
