--- a/src/pug/pages/ui/ui-accordeon.pug
+++ b/src/pug/pages/ui/ui-accordeon.pug
@@ -9,48 +9,47 @@ block content
 		.title Аккордеон
 		
 		.section-ui
-			.row
-				.col-lg-6
-					.accordion
-						.accordion-item
-							.accordion-item__title Описание
-							.accordion-item__content.accordion-item__content--hide
-								p Высота: 12см
-								p Ширина: 12см
-								p Размер: 12см
-								p Отделений для пластиковых карт: 12см
-								p Отделений для купюр: 12см
-								p Застежка: 12см
-								p Отделение для монет: 12см
-								p Тип сложения: 12см
-								p Ремешок: 12см
+			.accordion
+				.accordion-item
+					.accordion-item__title Описание
+					//- .accordion-item__content.accordion-item__content--hide
+					.accordion-item__content
+						p Высота: 12см
+						p Ширина: 12см
+						p Размер: 12см
+						p Отделений для пластиковых карт: 12см
+						p Отделений для купюр: 12см
+						p Застежка: 12см
+						p Отделение для монет: 12см
+						p Тип сложения: 12см
+						p Ремешок: 12см
 
-						.accordion-item
-							.accordion-item__title Характеристики
-							.accordion-item__content.accordion-item__content--hide
-								p Высота: 12см
-								p Ширина: 12см
-								p Размер: 12см
-								p Отделений для пластиковых карт: 12см
-								p Отделений для купюр: 12см
-								p Застежка: 12см
-								p Отделение для монет: 12см
-								p Тип сложения: 12см
-								p Ремешок: 12см
+				.accordion-item
+					.accordion-item__title Характеристики
+					.accordion-item__content.accordion-item__content--hide
+						p Высота: 12см
+						p Ширина: 12см
+						p Размер: 12см
+						p Отделений для пластиковых карт: 12см
+						p Отделений для купюр: 12см
+						p Застежка: 12см
+						p Отделение для монет: 12см
+						p Тип сложения: 12см
+						p Ремешок: 12см
 
-						.accordion-item
-							.accordion-item__title Доставка
-							.accordion-item__content.accordion-item__content--hide
-								p Почта России
-								p CDEK
-								p PonyExpress
-								p Курьерская доставка
-								p ТК Деловые Линии
+				.accordion-item
+					.accordion-item__title Доставка
+					.accordion-item__content.accordion-item__content--hide
+						p Почта России
+						p CDEK
+						p PonyExpress
+						p Курьерская доставка
+						p ТК Деловые Линии
 
-						.accordion-item
-							.accordion-item__title В наличии в 3 магазинах
-							.accordion-item__content.accordion-item__content--hide
-								p ТЦ Оранж, ул Мира, 12
-								p ТЦ Гранд, ул Московская, 25
-								p ТД Центральный, ул Гагарина, 8
+				.accordion-item
+					.accordion-item__title В наличии в 3 магазинах
+					.accordion-item__content.accordion-item__content--hide
+						p ТЦ Оранж, ул Мира, 12
+						p ТЦ Гранд, ул Московская, 25
+						p ТД Центральный, ул Гагарина, 8
 								
